# RightMeal

./: .env.example  .gitattributes  AGENT.md  README.md  pyproject.toml
content/: apple-chicken.md  apple-strudel.md  ardei-umpluti.md  arroz-chaufa.md  baby-back-ribs.md  baked-mostaccioli.md  baked-rice.md  baked-trout.md  banana-oatmeal-cookies.md  batter-pudding.md  beef-goulash.md  beef-liver-and-onions.md  bolognese-sauce.md  broiled-venison-steaks.md  cheese.md  cheesy-meatballs.md  chicken-satay.md  cinnamon-waffles.md  country-skillet.md  cream-cheese.md  creamy-mashed-potatoes.md  creme-brulee.md  cuca-italiana.md  dou-sha-bao.md  dulce-de-leche.md  farci-tomatoes.md  fennel-beans-and-kale-soup.md  fried-anglerfish-fillet.md  greek-yogurt.md  grostoli.md  guacamole.md  gumbo-shrimp-and-sausage.md  hearty-breakfast-oatmeal.md  hoisin-tofu-and-broccoli.md  korv-stroganoff.md  kropsua.md  lithuanian-cold-borscht.md  loaded-mexican-rice.md  long-cooked-chuck-steak.md  mapo-tofu.md  (+29 more)
reports/: recipe_coverage_report.json  top_40_ingredient_priority_report.json  unresolved_ingredients_report.json  usda_candidate_mappings.json  usda_decisions.json  usda_search_requests.json
scripts/: build_recipe_index.py  check_food_images.py  fetch_recipe_images.py  scan_ingredients.py
src/: main.py  theme.py
tests/: conftest.py  test_beam_scheduler.py  test_budget_repair.py  test_cache.py  test_costing.py  test_data_integrity.py  test_explanation.py  test_image_cache.py  test_image_processing.py  test_ingredient_matching.py  test_leftover_analyzer.py  test_leftover_prepass.py  (+42 more)
(+124 files in other folders)
