[project]
name = "rightmeal"
version = "0.1.0"
description = "Grocery planning and nutrition affordability tool (Thrifty-Food-Plan-inspired)"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Flet developer", email = "you@example.com" }
]
dependencies = [
    "flet>=0.85.3",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.2",
]

[dependency-groups]
dev = [
    "flet-cli>=0.85.3",
    "flet-desktop>=0.85.3",
    "flet-web>=0.85.3",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[tool.flet]
org = "com.mycompany"
product = "rightmeal"
company = "Flet"
copyright = "Copyright (C) 2023-2026 by Flet"

[tool.flet.app]
path = "src"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
asyncio_mode = "auto"
